--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
 <body>
   <h1>Services ChandStore</h1>
   <p>Selamat datang di layanan CDN ChandStore. File yang kamu cari tidak ditemukan atau belum tersedia.<br>Silakan periksa kembali URL atau hubungi admin jika perlu bantuan.</p>
-  <a href="https://freetools.web.id">Kembali ke Beranda</a>
+  <a href="https://t.me/Chandra0182">Contact Telegram</a>
   <footer>© 2025 ChandStore</footer>
 <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;94b56f51cf5a9e38&quot;,&quot;version&quot;:&quot;2025.5.0&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;821a7c72a0dd444fa1afa7f129a57c23&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfEdge&quot;:true,&quot;cfOrigin&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
 
